# wisq

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
circuits/: continuous_3_17_13.qasm
src/wisq/: __init__.py  architecture.py  chtc_runner.py  dascot.py  dascot_io.py  guoq.py  optimal_arb_layout.py  pennylane_sk.py  phased_graph.py  resource_estimator.py  resynth.py  sarouting.py  sat_scmr.py  utils.py  verification.py
src/wisq/lib/: README.md
src/wisq/lib/rules/: rules_q3_s3_cliffordt_symb.txt  rules_q3_s3_ibm_symb.txt  rules_q3_s3_ibmnew_symb.txt  rules_q3_s3_ion.txt  rules_q3_s3_ion_symb.txt  rules_q3_s3_nam_symb.txt  rules_q3_s3_rigetti_symb.txt  rules_q3_s4_ibm.txt  rules_q3_s5_rigetti.txt
src/wisq/params/: params.json
tests/: args.csv  args_limited.csv  gen_args.py  install_wisq.py  run_all.py  test_advanced_args_1.json
